CWPT-297 removed extra padding on list, moved aria-expanded attr to ul instead of div in children, added li margin to avoid overlap plus icon

--- a/src/scss/components/_sitemap.scss
+++ b/src/scss/components/_sitemap.scss
@@ -1,46 +1,42 @@
 /*  Sitemap formatting */
 .sitemap {
-    border-bottom: 1px solid $table-border-color;
-    list-style-type: none;
-    margin: 40px 0;
-    padding-left: 0;
+  border-bottom: 1px solid $table-border-color;
+  list-style-type: none;
+  margin: 40px 0;
+  padding-left: 0;
 
-    ul {
-        list-style-type: none
+  ul {
+    list-style-type: none;
+    padding-bottom: 10px;
+
+    .sitemap-link,
+    .page-toggle {
+      padding-bottom: 10px!important;
+      padding-top: 10px!important;
     }
+  }
+
 }
 
 .sitemap .initial {
-    border-top: 1px solid $table-border-color;
-    z-index: 0;
-    position: relative;
+  border-top: 1px solid $table-border-color;
+  z-index: 0;
+  position: relative;
 
-    &:hover {
-        background-color: $table-bg-hover;
-    }
+  &:hover {
+    background-color: $table-bg-hover;
+  }
 
-    .sitemap-link {
-        padding: 20px 0 20px 40px;
-        z-index: 1;
-        display: block;
-    }
-
-    .page-toggle__children {
-        padding-left: 20px;
-    }
+  .sitemap-link {
+    padding: 20px 0;
+    z-index: 1;
+    display: block;
+    margin-left: 40px;
+  }
 }
 
 .sitemap .page-toggle {
-    position: absolute;
-    padding: 20px 15px;
-    display: block;
-
-    &:hover {
-        text-decoration: none;
-        background-color: $table-bg-hover;
-    }
-}
-
-.sitemap .sitemap-loading {
-    padding: 0 0 20px 40px;
+  padding: 20px 15px;
+  display: inline-block;
+  float: left;
 }
